# PaddleOCR-Desktop

./: .gitignore  .gitmodules  BUILD_README.md  README.md
backend/: Cargo.toml
backend/python-onnx/: README.md  compare_models.py  download_models.py  paddleocr_backend.spec  requirements.txt  run_production.py  run_tauri.py  test_new_models.py  test_new_models.py.backup  test_old_pipeline.py  test_pipeline_ocr.py
backend/python-onnx/app/: cls_postprocess.py  config.py  deps.py  main.py  ocr_images_pdfs.py  onnx_paddleocr.py  operators.py  predict_base.py  predict_cls.py  predict_rec.py  rec_postprocess.py  router.py  utils.py
backend/python-onnx/app/api/: ocr.py
backend/python-onnx/app/core/: logger.py  ocr_images_pdfs.py  onnx_paddleocr.py  pp_doclayout_onnx.py  predict_base.py  predict_cls.py  predict_det.py  predict_rec.py  predict_system.py  rec_postprocess.py  utils.py
backend/python-onnx/app/core/pp_onnx/: __init__.py  cls_postprocess.py  db_postprocess.py  imaug.py  onnx_model_base.py  operators.py  pp_doclayout_onnx.py  pp_lcnet_doc_onnx.py  pp_ocrv5cls_onnx.py  pp_ocrv5det_onnx.py  pp_ocrv5det_onnx_new.py  pp_ocrv5rec_onnx.py  pp_ocrv5rec_onnx_new.py
backend/python-onnx/app/core/pp_pileline/: __init__.py  pp_ocrv5_pipeline.py  pp_ocrv5_pipeline_new.py  pp_structurev3_pipeline.py
backend/python-onnx/app/router/: __init__.py  models.py  ocr.py  ppocr.py  ppstructure.py
backend/rust-onnx/ocr-service/: Cargo.toml  build.rs
backend/rust-onnx/ocr-service/src/: main.rs
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
pp_onnx_convert/: .gitignore  README.md  batch_convert.sh  convert_to_onnx.sh  requirements.txt
references/: .gitignore  PP-StructureV3.md  PP-StructureV3_ONNX_compatibility.md  Paddleocr-Onnx.md  README.md  README_pp_doclayout.md  create_test_image.py  paddle2onnx_conversion_results.csv  pp_structure_flowchart.md  run_pp_doclayout.py  run_pp_structure_onnx.py  step_by_step_pp_structure.py
references/AppDemo/: __init__.py  (+3 more)
scripts/: build.ps1  build_models_package.ps1
tests/: test.py
(+40 files in other folders)
