cargo-features = ["profile-rustflags"]

[package]
name = "paddleocr-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oar-ocr = { path = "./oar-ocr" }
image = "0.25"

[profile.release]
rustflags = ["-C", "link-args=/NODEFAULTLIB:LIBCMT"]